[gd_scene load_steps=10 format=3 uid="uid://jadv5cnwph1c"]

[ext_resource type="PackedScene" uid="uid://xoi5bf006vpc" path="res://scenes/units/unit.tscn" id="1_woe1k"]
[ext_resource type="Script" uid="uid://dec003yxb7xxg" path="res://scenes/units/players/player.gd" id="2_0n7mm"]
[ext_resource type="Resource" uid="uid://b42xxkqwoymy1" path="res://resources/units/players/stat_player_well_rounded.tres" id="3_d3mmk"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_xgfo0"]
[ext_resource type="Script" uid="uid://bkd4k5vsdpg8f" path="res://scenes/units/players/trail.gd" id="4_udkk8"]
[ext_resource type="Script" uid="uid://bakur338cx0e2" path="res://scenes/units/players/weapon_container.gd" id="6_udkk8"]

[sub_resource type="Curve" id="Curve_n48mq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_q3bb5"]
radius = 1.4142135

[sub_resource type="CircleShape2D" id="CircleShape2D_d3mmk"]
radius = 33.06055

[node name="PlayerWellRounded" instance=ExtResource("1_woe1k")]
collision_mask = 2
script = ExtResource("2_0n7mm")
dash_duration = null
dash_speed_multi = null
dash_cooldown = null
stats = ExtResource("3_d3mmk")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
top_level = true
position = Vector2(0, -31)
points = PackedVector2Array(0, 0)
width = 50.0
width_curve = SubResource("Curve_n48mq")
script = ExtResource("4_udkk8")
player = NodePath("../..")
trail_length = 30

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("3_xgfo0")

[node name="CollisionShape2D" parent="." index="1"]
z_index = 1
position = Vector2(0, -31)
shape = SubResource("CircleShape2D_q3bb5")

[node name="WeaponContainer" type="Node2D" parent="." index="3"]
script = ExtResource("6_udkk8")

[node name="One" type="Node2D" parent="WeaponContainer" index="0"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/One" index="0"]
position = Vector2(0, -15)

[node name="Two" type="Node2D" parent="WeaponContainer" index="1"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Two" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Two" index="1"]
position = Vector2(-40, 20)

[node name="Three" type="Node2D" parent="WeaponContainer" index="2"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Three" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Three" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Three" index="2"]
position = Vector2(0, -115)

[node name="Four" type="Node2D" parent="WeaponContainer" index="3"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Four" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Four" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Four" index="2"]
position = Vector2(-40, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Four" index="3"]
position = Vector2(40, -115)

[node name="Five" type="Node2D" parent="WeaponContainer" index="4"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Five" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Five" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Five" index="2"]
position = Vector2(-60, -40)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Five" index="3"]
position = Vector2(60, -40)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Five" index="4"]
position = Vector2(0, -115)

[node name="Six" type="Node2D" parent="WeaponContainer" index="5"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Six" index="0"]
position = Vector2(35, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Six" index="1"]
position = Vector2(-35, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Six" index="2"]
position = Vector2(35, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Six" index="3"]
position = Vector2(-35, -115)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Six" index="4"]
position = Vector2(60, -45)

[node name="Marker2D6" type="Marker2D" parent="WeaponContainer/Six" index="5"]
position = Vector2(-60, -45)

[node name="DashTimer" type="Timer" parent="." index="4"]

[node name="DashCooldownTimer" type="Timer" parent="." index="5"]

[node name="TrailTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true
one_shot = true

[node name="HurtboxComponent" parent="." index="7"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
z_index = 1
position = Vector2(0, -31)
shape = SubResource("CircleShape2D_d3mmk")

[node name="HealthBar" parent="." index="9"]
offset_left = -48.0
offset_top = -89.0
offset_right = 48.0
offset_bottom = -69.0
back_color = Color(0.13725491, 0.019607844, 0.02745098, 1)
fill_color = Color(1, 0.2901961, 0.45490196, 1)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
